# homework_banking_operations

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6__init__py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  mylog.txt  processing.py  readers.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_readers.py  test_utils.py  test_widget.py
